# AnansiDesktop

./: .gitignore  FEATURES.md  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: EROS.js  FEATURES.md  README.md  actors.js  advanced.js  aura_simbuilder.js  build_system_data.py  character.js  chat-formatter.js  cue-presets.js  esprima.min.js  export.js  filetree.txt  flow-explorer.js  gate_types.js  index.html  io.js  jai.js  jai.renderer.js  llm.js  locations.js  lorebook.js  microcues.js  parlor.js  project-db.js  project.js  scoring.js  scripts.js  shortcuts.js  simulator.js  system_data.js  tester.js  tokens.js  tour.css  tour.js  tour_content.js  tours.js  ui-assistant.js  validator.js  voices.js
ui/assets/: README.md
ui/css/: main.css  tokens.css
ui/js/: flow-explorer.js  flow-logger.js
ui/js/aura/: AURA.js  INTENT.js  PULSE.js
ui/js/core/: adapters.js  analysis.js  anansi.js  aura_builder.js  aura_lib.js  aura_simbuilder.js  aura_transformers.js  card-encoder.js  converter.js  flow-logger.js  logic_engine.js  project-picker.js  quill_manager.js  sandbox.js  sandbox.worker.js  scripts.js  shortcuts.js  state.js  tester.js  token-metrics.js  token-utils.js  ui.js  validator.js
ui/js/lib/: escodegen.min.js
ui/js/panels/: actors.js  advanced.js  aura_simbuilder.js  character.js  events.js  flow-explorer.js  locations.js  lorebook.js  microcues.js  pairs.js  parlor.js  project.js  scoring.js  scripts.js  simulator.js  sources.js  stats.js  tokens.js  voices.js
