[package]
name = "anansi"
version = "1.0.0"
description = "A Tauri App"
authors = ["AnnabelleCaprine"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "fs-all", "path-all", "window-all", "dialog-all", "icon-ico", "icon-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]

custom-protocol = ["tauri/custom-protocol"]
